--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,70 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "gcc-8 build and debug active file",
+            "name": "114",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/130.Surrounded_Regions/solution",
+            "program": "${workspaceFolder}/build/114",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+        },
+        {
+            "name": "116",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/116",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+        },
+        {
+            "name": "236",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/236",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+        },
+        {
+            "name": "230",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/230",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+        },
+        {
+            "name": "508",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/508",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "lldb",
+        },
+        {
+            "name": "138",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/138",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
